--- a/package.json
+++ b/package.json
@@ -71,10 +71,12 @@
     "expeditious-engine-redis": "^0.1.2",
     "express": "^4.18.1",
     "express-expeditious": "^5.1.1",
+    "express-fileupload": "^1.4.3",
     "express-validator": "^6.14.0",
     "helmet": "^4.6.0",
     "i18n": "^0.13.4",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.30.1",
     "mongoose": "^5.13.14",
     "mongoose-paginate-v2": "^1.6.3",
     "morgan": "^1.10.0",
@@ -83,6 +85,7 @@
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "request-ip": "^2.1.3",
+    "socket.io": "^4.7.3",
     "trim-request": "^1.0.6",
     "uuid": "^8.3.2",
     "validator": "^13.7.0"
