--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-PORT=8000
+PORT=3000
 JWT_SECRET=MyUltraSecurePassWordIWontForgetToChange
 JWT_EXPIRATION_IN_MINUTES=4320
-MONGO_URI=mongodb+srv://prashantmathur96mongodb:DNkmn6ORtfTHb2JT@cluster0.65lsy3e.mongodb.net/vuProject
+MONGO_URI=mongodb://localhost:27017/vueProject
 EMAIL_FROM_NAME=My Project
 EMAIL_FROM_ADDRESS=info@myproject.com
 EMAIL_SMTP_DOMAIN_MAILGUN=myproject.com
